--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-simple-modal": "^1.1.5",
     "react-simple-modal-provider": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
@@ -54,6 +55,7 @@
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "husky": "^8.0.2",
